Fixed overflow

--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -5,13 +5,11 @@
 html {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
 }
 
 body, #app, .fullHeightWidth {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 *, *:before, *:after {
